Change name to 'helper text' and fix slotchange handler

--- a/demo/text-field-theme-demos.html
+++ b/demo/text-field-theme-demos.html
@@ -24,11 +24,11 @@
       </template>
     </vaadin-demo-snippet>
     
-    <h3>Hint position</h3>
+    <h3>Helper text position</h3>
     <vaadin-demo-snippet id="text-field-theme-demos-sizes">
       <template preserve-content>
-        <vaadin-text-field hint="Hint above text field"></vaadin-text-field>
-        <vaadin-text-field hint="Hint below text field" theme="hint-below"></vaadin-text-field>
+        <vaadin-text-field helper-text="helper above text field"></vaadin-text-field>
+        <vaadin-text-field helper-text="helper below text field" theme="helper-above-field"></vaadin-text-field>
       </template>
     </vaadin-demo-snippet>
 
