--- a/test/visual/vaadin-text-area/text-area-3.html
+++ b/test/visual/vaadin-text-area/text-area-3.html
@@ -35,7 +35,7 @@
     <fieldset id="text-area">
       label and value: <vaadin-text-area label="Foo" value="Bar"></vaadin-text-area>
       <p>
-      label, hint and value: <vaadin-text-area label="Foo" value="Bar" hint="Baz"></vaadin-text-area>
+      label, helper and value: <vaadin-text-area label="Foo" value="Bar" helper-text="Baz"></vaadin-text-area>
       <p>
       prefix and suffix:
         <vaadin-text-area label="Foo" value="Bar">
