--- a/test/visual/vaadin-text-field/text-field-2.html
+++ b/test/visual/vaadin-text-field/text-field-2.html
@@ -51,11 +51,11 @@
       <p>
       label and value: <vaadin-text-field label="Foo" value="Bar"></vaadin-text-field>
       <p>
-      label, hint and value: <vaadin-text-field label="Foo" value="Bar" hint="Baz"></vaadin-text-field>
+      label, helper and value: <vaadin-text-field label="Foo" value="Bar" helper-text="Baz"></vaadin-text-field>
       <p>
-      custom hint:
+      custom helper:
         <vaadin-text-field>
-          <span slot="hint">Baz</span>
+          <span slot="helper">Baz</span>
         </vaadin-text-field>
       <p>
       prefix and suffix:
