--- a/demo/text-field-basic-demos.html
+++ b/demo/text-field-basic-demos.html
@@ -39,14 +39,14 @@
       </template>
     </vaadin-demo-snippet>
 
-    <h3>Hint text</h3>
-    <p>Use the <code>hint</code> attribute or add content to the hint slot to set helper text.</p>
+    <h3>Helper text</h3>
+    <p>Use the <code>helper-text</code> attribute or add content to the <code>helper</code> slot to set helper content.</p>
     <vaadin-demo-snippet id="text-field-basic-demos-helper-text">
       <template preserve-content>
         <vaadin-text-field label="Username">
-          <span slot="hint">Typically "firstname.lastname"</span>
+          <span slot="helper">Typically "firstname.lastname"</span>
         </vaadin-text-field>
-        <vaadin-password-field label="Password" hint="Choose a strong password"></vaadin-password-field>
+        <vaadin-password-field label="Password" helper-text="Choose a strong password"></vaadin-password-field>
       </template>
     </vaadin-demo-snippet>
 
