--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -17,9 +17,9 @@ This program is available under Apache License Version 2.0, available at https:/
         min-height: inherit; /* MSIE 11 */
       }
 
-      /* The label and the error message should neither grow nor shrink. */
+      /* The label, helper text and the error message should neither grow nor shrink. */
       [part="label"],
-      [part="hint"],
+      [part="helper-text"],
       [part="error-message"] {
         flex: none;
       }
@@ -52,10 +52,6 @@ This program is available under Apache License Version 2.0, available at https:/
     <div class="vaadin-text-area-container">
 
       <label part="label" on-click="focus" id="[[_labelId]]">[[label]]</label>
-      
-      <div part="hint" on-click="focus" id="[[_hintId]]">
-        <slot name="hint">[[hint]]</slot>
-      </div>
 
       <div part="input-field" id="[[_inputId]]">
 
@@ -68,6 +64,10 @@ This program is available under Apache License Version 2.0, available at https:/
         <div part="clear-button" id="clearButton" role="button" aria-label$="[[i18n.clear]]"></div>
         <slot name="suffix"></slot>
 
+      </div>
+
+      <div part="helper-text" on-click="focus" id="[[_helperTextId]]">
+        <slot name="helper">[[helperText]]</slot>
       </div>
 
       <div part="error-message"
@@ -122,7 +122,7 @@ This program is available under Apache License Version 2.0, available at https:/
        * `disabled` | Set to a disabled text field | :host
        * `has-value` | Set when the element has a value | :host
        * `has-label` | Set when the element has a label | :host
-       * `has-hint` | Set when the element has hint text | :host
+       * `has-helper` | Set when the element has helper text | :host
        * `has-error-message` | Set when the element has an error message | :host
        * `invalid` | Set when the element is invalid | :host
        * `focused` | Set when the element is focused | :host
