--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -223,12 +223,12 @@ This program is available under Apache License Version 2.0, available at https:/
         },
 
         /**
-         * String used for the hint text.
+         * String used for the helper text.
          */
-        hint: {
+        helperText: {
           type: String,
           value: '',
-          observer: '_hintChanged'
+          observer: '_helperTextChanged'
         },
 
         /**
@@ -315,7 +315,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
         _labelId: String,
 
-        _hintId: String,
+        _helperTextId: String,
 
         _errorId: String,
 
@@ -327,9 +327,9 @@ This program is available under Apache License Version 2.0, available at https:/
       return ['_stateChanged(disabled, readonly, clearButtonVisible, hasValue)',
         '_hostPropsChanged(' + HOST_PROPS.default.join(', ') + ')',
         '_hostAccessiblePropsChanged(' + HOST_PROPS.accessible.join(', ') + ')',
-        '_getActiveErrorId(invalid, errorMessage, _errorId, hint, _hintId)',
+        '_getActiveErrorId(invalid, errorMessage, _errorId, helperText, _helperTextId)',
         '_getActiveLabelId(label, _labelId, _inputId)',
-        '__observeOffsetHeight(errorMessage, invalid, label, hint)'
+        '__observeOffsetHeight(errorMessage, invalid, label, helperText)'
       ];
     }
 
@@ -453,22 +453,25 @@ This program is available under Apache License Version 2.0, available at https:/
       this._setOrToggleAttribute('has-label', label === 0 ? true : !!label, this);
     }
 
-    _hintChanged(hint) {
-      this._setOrToggleAttribute('has-hint', hint === 0 ? true : !!hint, this);
+    _helperTextChanged(helperText) {
+      this._setOrToggleAttribute('has-helper', helperText === 0 ? true : !!helperText, this);
     }
 
     _errorMessageChanged(errorMessage) {
       this._setOrToggleAttribute('has-error-message', errorMessage === 0 ? true : !!errorMessage, this);
     }
 
-    _hintSlotChange() {
-      this._slottedHint = this.querySelector(`[slot="hint"]`);
-      const slottedNodes = this.root.querySelector(`[name="hint"]`).assignedNodes();
+    _onHelperSlotChange() {
+      this._slottedHelper = this.querySelector(`[slot="helper"]`);
+      const slottedNodes = this.root.querySelector(`[name="helper"]`).assignedNodes();
 
-      if (slottedNodes.length) {
-        this.setAttribute('has-hint', 'slotted');
-      } else if (this.hint === '' || this.hint === null) {
-        this.removeAttribute('has-hint');
+      // Only not empty if not a text node
+      // Text nodes are added by the helperText prop and not the helper slot
+      // The filter is added due to shady DOM triggering this slotchange event on helperText prop change
+      if (slottedNodes.filter(node => node.nodeType !== 3).length) {
+        this.setAttribute('has-helper', 'slotted');
+      } else if (this.helperText === '' || this.helperText === null) {
+        this.removeAttribute('has-helper');
       }
     }
 
@@ -598,8 +601,8 @@ This program is available under Apache License Version 2.0, available at https:/
       this.shadowRoot.querySelector('[name="input"], [name="textarea"]')
         .addEventListener('slotchange', this._onSlotChange.bind(this));
 
-      this._hintSlotChange();
-      this.shadowRoot.querySelector('[name="hint"]').addEventListener('slotchange', this._hintSlotChange.bind(this));
+      this._onHelperSlotChange();
+      this.shadowRoot.querySelector('[name="helper"]').addEventListener('slotchange', this._onHelperSlotChange.bind(this));
 
       if (!(window.ShadyCSS && window.ShadyCSS.nativeCss)) {
         this.updateStyles();
@@ -613,7 +616,7 @@ This program is available under Apache License Version 2.0, available at https:/
       var uniqueId = Vaadin.TextFieldMixin._uniqueId = 1 + Vaadin.TextFieldMixin._uniqueId || 0;
       this._errorId = `${this.constructor.is}-error-${uniqueId}`;
       this._labelId = `${this.constructor.is}-label-${uniqueId}`;
-      this._hintId = `${this.constructor.is}-hint-${uniqueId}`;
+      this._helperTextId = `${this.constructor.is}-helper-${uniqueId}`;
       this._inputId = `${this.constructor.is}-input-${uniqueId}`;
 
       // Lumo theme defines a max-height transition for the "error-message"
@@ -711,13 +714,13 @@ This program is available under Apache License Version 2.0, available at https:/
       }
     }
 
-    _getActiveErrorId(invalid, errorMessage, errorId, hint, hintId) {
+    _getActiveErrorId(invalid, errorMessage, errorId, helperText, helperTextId) {
       let ids = '';
-      if (hint) {
-        ids += hintId;
+      if (helperText) {
+        ids += helperTextId;
       }
       if (errorMessage && invalid) {
-        ids += hint ? ' ' : '';
+        ids += helperText ? ' ' : '';
         ids += errorId;
       }
       this._setOrToggleAttribute('aria-describedby', ids, this.focusElement);
