--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -17,10 +17,6 @@ This program is available under Apache License Version 2.0, available at https:/
     <div class="vaadin-text-field-container">
 
       <label part="label" on-click="focus" id="[[_labelId]]">[[label]]</label>
-      
-      <div part="hint" on-click="focus" id="[[_hintId]]">
-        <slot name="hint">[[hint]]</slot>
-      </div>
 
       <div part="input-field" id="[[_inputId]]">
 
@@ -33,6 +29,10 @@ This program is available under Apache License Version 2.0, available at https:/
         <div part="clear-button" id="clearButton" role="button" aria-label$="[[i18n.clear]]"></div>
         <slot name="suffix"></slot>
 
+      </div>
+
+      <div part="helper-text" on-click="focus" id="[[_helperTextId]]">
+        <slot name="helper">[[helperText]]</slot>
       </div>
 
       <div part="error-message"
@@ -93,7 +93,7 @@ This program is available under Apache License Version 2.0, available at https:/
        * `disabled` | Set to a disabled text field | :host
        * `has-value` | Set when the element has a value | :host
        * `has-label` | Set when the element has a label | :host
-       * `has-hint` | Set when the element has hint text | :host
+       * `has-helper` | Set when the element has helper text or slot | :host
        * `has-error-message` | Set when the element has an error message | :host
        * `invalid` | Set when the element is invalid | :host
        * `input-prevented` | Temporarily set when invalid input is prevented | :host
