--- a/test/text-field.html
+++ b/test/text-field.html
@@ -327,45 +327,45 @@
             expect(textField.hasAttribute('has-label')).to.be.true;
           });
 
-          it('setting hint updates has-hint attribute', function() {
-            textField.hint = 'foo';
-            expect(textField.hasAttribute('has-hint')).to.be.true;
+          it('setting helper updates has-helper attribute', function() {
+            textField.helperText = 'foo';
+            expect(textField.hasAttribute('has-helper')).to.be.true;
           });
 
-          it('setting hint to empty string does not update has-hint attribute', function() {
-            textField.hint = '';
-            expect(textField.hasAttribute('has-hint')).to.be.false;
+          it('setting helper to empty string does not update has-helper attribute', function() {
+            textField.helperText = '';
+            expect(textField.hasAttribute('has-helper')).to.be.false;
           });
 
-          it('setting hint to null does not update has-hint attribute', function() {
-            textField.hint = null;
-            expect(textField.hasAttribute('has-hint')).to.be.false;
+          it('setting helper to null does not update has-helper attribute', function() {
+            textField.helperText = null;
+            expect(textField.hasAttribute('has-helper')).to.be.false;
           });
 
-          it('setting number hint updates has-hint attribute', function() {
-            textField.hint = 0;
-            expect(textField.hasAttribute('has-hint')).to.be.true;
+          it('setting number helper updates has-helper attribute', function() {
+            textField.helperText = 0;
+            expect(textField.hasAttribute('has-helper')).to.be.true;
           });
 
-          it('setting hint with slot updates has-hint attribute', function(done) {
-            const hint = document.createElement('div');
-            hint.setAttribute('slot', 'hint');
-            hint.textContent = 'foo';
-            textField.appendChild(hint);
+          it('setting helper with slot updates has-helper attribute', function(done) {
+            const helper = document.createElement('div');
+            helper.setAttribute('slot', 'helper');
+            helper.textContent = 'foo';
+            textField.appendChild(helper);
             setTimeout(() => {
-              expect(textField.hasAttribute('has-hint')).to.be.true;
+              expect(textField.hasAttribute('has-helper')).to.be.true;
               done();
             }, 1);
           });
 
-          it('removing slotted hint removes has-hint attribute', function(done) {
-            const hint = document.createElement('div');
-            hint.setAttribute('slot', 'hint');
-            hint.textContent = 'foo';
-            textField.appendChild(hint);
-            textField.removeChild(hint);
+          it('removing slotted helper removes has-helper attribute', function(done) {
+            const helper = document.createElement('div');
+            helper.setAttribute('slot', 'helper');
+            helper.textContent = 'foo';
+            textField.appendChild(helper);
+            textField.removeChild(helper);
             setTimeout(() => {
-              expect(textField.hasAttribute('has-hint')).to.be.false;
+              expect(textField.hasAttribute('has-helper')).to.be.false;
               done();
             }, 1);
           });
@@ -381,11 +381,11 @@
             });
           });
 
-          describe(`hint ${condition}`, function() {
+          describe(`helper ${condition}`, function() {
             it('should not update focused property on click if disabled', function() {
               textField.disabled = true;
-              const hint = textField.root.querySelector('[part="hint"]');
-              hint.click();
+              const helper = textField.root.querySelector('[part="helper-text"]');
+              helper.click();
               expect(textField.getAttribute('focused')).to.be.null;
             });
           });
