--- a/demo/text-field-theme-demos.html
+++ b/demo/text-field-theme-demos.html
@@ -27,8 +27,8 @@
     <h3>Helper text position</h3>
     <vaadin-demo-snippet id="text-field-theme-demos-sizes">
       <template preserve-content>
-        <vaadin-text-field helper-text="helper above text field"></vaadin-text-field>
-        <vaadin-text-field helper-text="helper below text field" theme="helper-above-field"></vaadin-text-field>
+        <vaadin-text-field helper-text="helper text below text field"></vaadin-text-field>
+        <vaadin-text-field helper-text="helper text above text field" theme="helper-above-field"></vaadin-text-field>
       </template>
     </vaadin-demo-snippet>
 
