--- a/theme/material/vaadin-text-field-styles.html
+++ b/theme/material/vaadin-text-field-styles.html
@@ -146,7 +146,7 @@
         opacity: 0;
       }
 
-      /* According to matrial theme guidelines, helper text should be hidden when error message is set and input is invalid */
+      /* According to material theme guidelines, helper text should be hidden when error message is set and input is invalid */
       :host([has-helper][invalid][has-error-message]) [part="helper-text"] {
         display: none;
       }
