--- a/test/accessibility.html
+++ b/test/accessibility.html
@@ -324,16 +324,15 @@
               expect(input.getAttribute('aria-describedby')).to.equal(`${helperText.id} ${err.id}`);
             });
 
-            it('should have aria-describedby with helper text and error message if slotted helper is set and input invalid', function(done) {
+            it('should have aria-describedby with helper text and error message if slotted helper is set and input invalid', function() {
               const tf = fixture(`${el}-with-slotted-helper`);
               const input = tf.inputElement;
               const err = tf.root.querySelector('[part=error-message]');
               const helperText = tf.root.querySelector('[part=helper-text]');
+              const evt = new CustomEvent('slotchange');
               tf.validate();
-              setTimeout(() => {
-                expect(input.getAttribute('aria-describedby')).to.equal(`${helperText.id} ${err.id}`);
-                done();
-              }, 1);
+              tf.shadowRoot.querySelector('[name="helper"]').dispatchEvent(evt);
+              expect(input.getAttribute('aria-describedby')).to.equal(`${helperText.id} ${err.id}`);
             });
 
             it('should have appropriate aria-live attribute', function() {
