--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -120,7 +120,6 @@ This program is available under Apache License Version 2.0, available at https:/
              */
             step: {
               type: Number,
-              reflectToAttribute: true,
               value: 1,
               observer: '_stepChanged'
             }
@@ -303,13 +302,13 @@ This program is available under Apache License Version 2.0, available at https:/
         }
 
         _stepChanged(step) {
-          if (!this.__stepChangedCalled && step === 1) {
-            // Setting the initial value, avoid using it in validation.
-            this.inputElement.step = 'any';
-          } else {
-            this.inputElement.step = step;
-          }
+          // Avoid using initial value in validation
+          const validateByStep = this.__stepChangedCalled
+            || (!this.__stepChangedCalled && this.getAttribute('step') !== null);
+          this.inputElement.step = validateByStep ? step : 'any';
+
           this.__stepChangedCalled = true;
+          this.setAttribute('step', step);
         }
 
         _minChanged(min) {
@@ -348,7 +347,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
         checkValidity() {
           // text-field mixin does not check against `min`, `max` and `step`
-          if (this.min !== undefined || this.max !== undefined || this.step !== 1) {
+          if (this.min !== undefined || this.max !== undefined || this.inputElement.step !== 'any') {
             this.invalid = !this.inputElement.checkValidity();
           }
           return super.checkValidity();
