--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -333,7 +333,7 @@ This program is available under Apache License Version 2.0, available at https:/
         }
 
         __onInputChange() {
-          this.checkValidity();
+          this.validate();
         }
 
         _stepOrMinChanged(step, min) {
@@ -344,7 +344,7 @@ This program is available under Apache License Version 2.0, available at https:/
         checkValidity() {
           // text-field mixin does not check against `min`, `max` and `step`
           if (this.min !== undefined || this.max !== undefined || this.step !== 1) {
-            this.invalid = !this.inputElement.checkValidity();
+            return this.inputElement.checkValidity();
           }
           return super.checkValidity();
         }
