--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -540,7 +540,7 @@ This program is available under Apache License Version 2.0, available at https:/
      * @returns {boolean}
      */
     checkValidity() {
-      if (this.required || this.pattern || this.maxlength || this.minlength) {
+      if (this.required || this.pattern || this.maxlength || this.minlength || this.__forceCheckValidity) {
         return this.inputElement.checkValidity();
       } else {
         return !this.invalid;
