Fix rtl styles for number-fields

--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -42,6 +42,25 @@ This program is available under Apache License Version 2.0, available at https:/
         /* Older Firefox versions (v47.0) requires !important */
         -moz-appearance: textfield !important;
       }
+
+      :host([dir="rtl"]) [part="input-field"] {
+        direction: ltr;
+      }
+
+      :host([dir="rtl"]) [part="value"]::placeholder {
+        direction: rtl;
+        text-align: left;
+      }
+
+      :host([dir="rtl"]) [part="input-field"] ::slotted(input)::placeholder {
+        direction: rtl;
+        text-align: left;
+      }
+
+      :host([dir="rtl"]) [part="value"]:-ms-input-placeholder,
+      :host([dir="rtl"]) [part="input-field"] ::slotted(input):-ms-input-placeholder {
+        direction: rtl;
+      }
     </style>
 
     <div
