--- a/src/vaadin-email-field.html
+++ b/src/vaadin-email-field.html
@@ -14,6 +14,22 @@ This program is available under Apache License Version 2.0, available at https:/
       :host([dir="rtl"]) [part="input-field"] {
         direction: ltr;
       }
+
+      :host([dir="rtl"]) [part="value"]::placeholder {
+        direction: rtl;
+        text-align: left;
+      }
+
+      :host([dir="rtl"]) [part="input-field"] ::slotted(input)::placeholder {
+        direction: rtl;
+        text-align: left;
+      }
+
+      :host([dir="rtl"]) [part="value"]:-ms-input-placeholder,
+      :host([dir="rtl"]) [part="input-field"] ::slotted(input):-ms-input-placeholder {
+        direction: rtl;
+        text-align: left;
+      }
     </style>
   </template>
   <script>
