--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -49,17 +49,20 @@ This program is available under Apache License Version 2.0, available at https:/
 
       :host([dir="rtl"]) [part="value"]::placeholder {
         direction: rtl;
-        text-align: left;
       }
 
       :host([dir="rtl"]) [part="input-field"] ::slotted(input)::placeholder {
         direction: rtl;
-        text-align: left;
       }
 
       :host([dir="rtl"]) [part="value"]:-ms-input-placeholder,
       :host([dir="rtl"]) [part="input-field"] ::slotted(input):-ms-input-placeholder {
         direction: rtl;
+      }
+
+      :host([dir="rtl"]:not([has-controls])) [part="value"]::placeholder,
+      :host([dir="rtl"]:not([has-controls])) [part="input-field"] ::slotted(input)::placeholder {
+        text-align: left;
       }
     </style>
 
