--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -60,8 +60,16 @@ This program is available under Apache License Version 2.0, available at https:/
         direction: rtl;
       }
 
-      :host([dir="rtl"]:not([has-controls])) [part="value"]::placeholder,
+      :host([dir="rtl"]:not([has-controls])) [part="value"]::placeholder {
+        text-align: left;
+      }
+
       :host([dir="rtl"]:not([has-controls])) [part="input-field"] ::slotted(input)::placeholder {
+        text-align: left;
+      }
+
+      :host([dir="rtl"]:not([has-controls])) [part="value"]:-ms-input-placeholder,
+      :host([dir="rtl"]:not([has-controls])) [part="input-field"] ::slotted(input):-ms-input-placeholder {
         text-align: left;
       }
     </style>
