--wip-- [skip ci]

--- a/src/vaadin-integer-field.html
+++ b/src/vaadin-integer-field.html
@@ -14,16 +14,16 @@ This program is available under Apache License Version 2.0, available at https:/
     (function() {
 
       /**
-      * `<vaadin-integer-field>` is a Web Component for integer field control in forms.
-      *
-      * ```html
-      * <vaadin-integer-field label="Number">
-      * </vaadin-integer-field>
-      * ```
-      *
-      * @extends Vaadin.NumberFieldElement
-      * @demo demo/index.html
-      */
+       * `<vaadin-integer-field>` is a Web Component for integer field control in forms.
+       *
+       * ```html
+       * <vaadin-integer-field label="Number">
+       * </vaadin-integer-field>
+       * ```
+       * @memberof Vaadin
+       * @extends Vaadin.NumberFieldElement
+       * @demo demo/index.html
+       */
       class IntegerFieldElement extends Vaadin.NumberFieldElement {
         static get is() {
           return 'vaadin-integer-field';
