--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -96,16 +96,16 @@ This program is available under Apache License Version 2.0, available at https:/
       let memoizedTemplate;
 
       /**
-      * `<vaadin-number-field>` is a Web Component for number field control in forms.
-      *
-      * ```html
-      * <vaadin-number-field label="Number">
-      * </vaadin-number-field>
-      * ```
-      *
-      * @extends Vaadin.TextFieldElement
-      * @demo demo/index.html
-      */
+       * `<vaadin-number-field>` is a Web Component for number field control in forms.
+       *
+       * ```html
+       * <vaadin-number-field label="Number">
+       * </vaadin-number-field>
+       * ```
+       * @memberof Vaadin
+       * @extends Vaadin.TextFieldElement
+       * @demo demo/index.html
+       */
       class NumberFieldElement extends Vaadin.TextFieldElement {
         static get is() {
           return 'vaadin-number-field';
