--- a/src/vaadin-password-field.html
+++ b/src/vaadin-password-field.html
@@ -70,6 +70,7 @@ This program is available under Apache License Version 2.0, available at https:/
        *
        * See [ThemableMixin – how to apply styles for shadow parts](https://github.com/vaadin/vaadin-themable-mixin/wiki)
        *
+       * @memberof Vaadin
        * @extends Vaadin.TextFieldElement
        * @demo demo/index.html
        */
