fix: improve TS defs based on review [skip ci]

--- a/src/vaadin-integer-field.html
+++ b/src/vaadin-integer-field.html
@@ -72,8 +72,8 @@ This program is available under Apache License Version 2.0, available at https:/
         }
 
         /**
-         * @param {!number} newVal
-         * @param {!number} oldVal
+         * @param {number} newVal
+         * @param {number | undefined} oldVal
          * @protected
          */
         _stepChanged(newVal, oldVal) {
