--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -347,8 +347,8 @@ This program is available under Apache License Version 2.0, available at https:/
         }
 
         /**
-         * @param {!number} newVal
-         * @param {!number} oldVal
+         * @param {number} newVal
+         * @param {number | undefined} oldVal
          * @protected
          */
         _stepChanged(newVal, oldVal) {
