fix: add @private annotations

--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -335,12 +335,16 @@ This program is available under Apache License Version 2.0, available at https:/
         /** @private */
         _labelId: String,
 
+        /** @private */
         _helperTextId: String,
 
+        /** @private */
         _errorId: String,
 
+        /** @private */
         _inputId: String,
 
+        /** @private */
         _hasSlottedHelper: Boolean
       };
     }
