Remove flag where it was added

--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -424,11 +424,12 @@ This program is available under Apache License Version 2.0, available at https:/
         }
       }
 
-      // Value can remain the same on input when pasting
-      if (!e.__fromClearButton && this.value !== e.target.value) {
+      if (!e.__fromClearButton) {
         this.__userInput = true;
       }
+
       this.value = e.target.value;
+      this.__userInput = false;
     }
 
     // NOTE(yuriy): Workaround needed for IE11 and Edge for proper displaying
@@ -485,7 +486,6 @@ This program is available under Apache License Version 2.0, available at https:/
       }
 
       if (this.__userInput) {
-        this.__userInput = false;
         return;
       } else if (newVal !== undefined) {
         this.inputElement.value = newVal;
