--- a/test/text-area.html
+++ b/test/text-area.html
@@ -318,7 +318,7 @@
 
           textArea.value = Array(400).join('400');
           textArea.value = textArea.value.slice(0, -1);
-          expect(input.scrollHeight).to.equal(inputField.scrollHeight);
+          expect(input.clientHeight).to.equal(inputField.scrollHeight);
         });
 
         it('should cover input field', () => {
